--- a/proyekakhir-html-css/index.html
+++ b/proyekakhir-html-css/index.html
@@ -1,15 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Aroma Bumi</title>
-    <link rel="stylesheet" href="stylesheet.css">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <a href="https://github.com/LewinsHp" rel="follow">Lewin</a></p>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+        <!-- Icons -->
+
+        <script src="https://unpkg.com/feather-icons"></script>
+
+        <!-- CSS -->
+
+        <link rel="stylesheet" href="aroma_bumi.css" />
+        <link rel="stylesheet" href="header.css" />
+        <link rel="stylesheet" href="main.css" />
+        <link rel="stylesheet" href="footer.css" />
+       
+
+        <title>Aroma Bumi</title>
+    </head>
 <body>
-    
+    <!-- Navbar -->
+    <nav>
+        <div class="navbar">
+            <a href="#" class="navbar-logo"><img src="assets/Logo White.png" /></a>
+
+            <div class="navbar-nav">
+                <a href="product.html">Products</a>
+                <a href="store.html">Store</a>
+                <a href="contact.html">Contact</a>
+                <a href="help.html">Help</a>
+            </div>
+
+            <div id="menu">
+                <a href="#"><i data-featger="menu"></i></a>
+            </div>
+        </div>
+    </nav>
+    <!-- Akhir Navbar -->
+
+    <!-- Hero Section -->
+    <header class="hero" id="home">
+        <div>
+            <h1>Freshly Browed Coffee & Tea</h1>
+            <p>Best qualities from our local soil</p>
+        </div>
+    </header>
+    <!-- Akhir Hero Section -->
+
+    <main>
+    <!-- About -->
+    <section id="who" class="who">
+        <img src="assets/Who.jpg" />
+
+        <div class="content">
+            <h2>Who Are We ?</h2>
+            <p>
+                We are Jakarta-based coffee and tea house focused on profesionally
+                brewing local sourced, high quality, coffee beans and tea leaves.
+            </p>
+            <br>
+
+            <a href="#" class="button">See our coffee and tea</a>
+        </div>
+    </section>
+
+    <section id="product" class="product">
+        <img src="assets/Our products.jpg">
+
+        <div class="content">
+            <h2>Product Showcase</h2>
+            <p>
+                We are Jakarta-based coffee and tea house focused on profesionally
+                brewing local sourced, high quality, coffee beans and tea leaves.
+            </p>
+            <br>
+
+            <a href="#" class="button">See Our Coffee and Tea</a>
+        </div>
+    </section>
+
+    <section id="who" class="who">
+        <img src="assets/Hang out with us.jpg" />
+
+        <div class="content">
+            <h2>Hang Out With Us</h2>
+            <p>
+                We are Jakarta-based coffe and tea house focused on profesionally
+                brewing local sourced, high quality, coffe beans and tea leaves.
+            </p>
+
+            <br>
+
+            <a href="#" class="button">See Our Coffee and Tea</a>
+        </div>
+    </section>
+
+    <!-- Akhir About -->
+
+    <section class="sosial-media">
+        <h3>Find us out at Instagram <a href="#">@aroma_bumi</a></h3>
+        <div>
+          <img src="assets/Feed 1.png" alt="image" />
+          <img src="assets/Feed 2.png" alt="image" />
+          <img src="assets/Feed 3.png" alt="image" />
+        </div>
+        <div>
+          <img src="assets/Feed 4.png" alt="image" />
+          <img src="assets/Feed 5.png" alt="image" />
+          <img src="assets/Feed 6.png" alt="image" />
+        </div>
+      </section>
+
+    <section class="ask">
+        <h3>Ask Us More !</h3>
+        <p>
+            if you have any questions or interested to cooperate with us, kindy
+            let us know here:
+        </p>
+
+        <a href="help.html" class="button">Contact Us</a>
+    </section>
+    </main>
+
+    <footer>
+        <div class="footer-logo">
+          <img src="assets/Logo White.png" width="335px" />
+          <div>
+            <img src="assets/MAIL ICON.svg" width="20px" />
+            <img src="assets/PHONE ICON.svg" width="20px" />
+          </div>
+        </div>
+        <div class="footer-link">
+          <div>
+            <h4>Products</h4>
+            <ul>
+              <li>Coffe Based</li>
+              <li>Non-Coffe</li>
+              <li>Tea Based</li>
+            </ul>
+          </div>
+          <div>
+            <h4>Store</h4>
+            <ul>
+              <li>Location</li>
+            </ul>
+          </div>
+          <div>
+            <h4>Contact</h4>
+            <ul>
+              <li>Costumer Service</li>
+            </ul>
+          </div>
+        </div>
+      </footer>
 </body>
 </html>
